--- a/toyota.html
+++ b/toyota.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>toyota</title>
+		<title>bend it like toyota</title>
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
